--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="52dp"
@@ -171,5 +172,28 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layout_constraintGuide_begin="523dp" />
+
+    <Button
+        android:id="@+id/calendar"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:background="@drawable/calendar"
+        android:src="@drawable/calendar"
+        app:layout_constraintBottom_toTopOf="@+id/cardview_main"
+        app:layout_constraintEnd_toEndOf="@+id/countdown_textview_main"
+        app:layout_constraintStart_toStartOf="@+id/countdown_textview_main"
+        app:layout_constraintTop_toBottomOf="@+id/countdown_textview_main" />
+
+    <Button
+        android:id="@+id/menu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:background="@android:drawable/ic_menu_agenda"
+        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/textView"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
