--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
     <color name="colorPrimary">#ED0072</color>
     <color name="colorPrimaryDark">#FF416C</color>
     <color name="colorAccent">@android:color/white</color>
+
+    <color name="gray">#888</color>
+    <color name="blue">#0000FF</color>
 </resources>
